# flexmeasures-client

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  NOTICE  README.rst  docker-compose.override.yml  docker-compose.yml  log  public-key.asc  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  wizzard-test.py
.github/: release.yml
.github/agents/: copilot.md  test-specialist.md
.github/workflows/: ci.yml  release.yml
ci/: run_mypy.sh
docs/: CEM.rst  HEMS.rst  conf.py  forecasting.rst  index.rst
examples/: HEMS_setup.py  aggregate_reporter_config.json  aggregate_reporter_param.json  self-consumption_reporter_config.json  self_consumption_reporter_config.json  self_consumption_reporter_param.json  send_data_to_asset.py  sensor_data.csv  sensor_data.xls  sensor_data_upload.py  total-energy-costs_reporter_config.json  update_flex_model.py  utils.py
examples/HEMS/: HEMS_setup.py  assets_setup.py  const.py  forecasting.py  reporters.py  scheduling.py
examples/HEMS data/: PV_production_data.csv  building_data.csv  heating_soc_usage_data.csv  irradiation_data.csv  max_consumption_capacity.csv  max_production_capacity.csv  price_data.csv
examples/HEMS/configs/: self-consumption_reporter_config.json
examples/HEMS/data/: PV_production_data.csv  building_data.csv  heating_soc_usage_data.csv  irradiation_data.csv  max_consumption_capacity.csv  max_production_capacity.csv  price_data.csv  site_power_capacity.csv
examples/HEMS/utils/: asset_utils.py  ev_utils.py  reporter_utils.py  scheduling_utils.py
src/flexmeasures_client/: __init__.py  client.py  constants.py  exceptions.py  response_handling.py  script_guus.py  skeleton.py
src/flexmeasures_client/s2/: __init__.py  cem.py  config_utils.py  const.py  exceptions.py  frbc.py  utils.py  websockets_client.py  websockets_server.py  wrapper.py
src/flexmeasures_client/s2/control_types/: __init__.py  frbc.py  translations.py
src/flexmeasures_client/s2/control_types/FRBC/: __init__.py  frbc_simple.py  frbc_tunes.py  utils.py
src/flexmeasures_client/s2/script/: demo_setup.py  websockets_client.py  websockets_server.py
tests/: conftest.py  test_cem.py  test_client.py  test_frbc_tunes.py  test_frbc_utils.py  test_s2_coordinator.py  test_s2_models.py  test_s2_translations.py  test_skeleton.py
tests/client/: test_account.py  test_asset.py  test_forecast.py  test_helpers.py  test_init.py  test_schedule.py  test_sensor.py
tests/s2/: conftest.py  test_cem.py  test_frbc_tunes.py  test_frbc_utils.py  test_s2_models.py  test_s2_translations.py  test_timezone.py  test_utils.py
(+6 files in other folders)
